# sinhala_training

./: .gitignore  Cargo.toml  flake.nix  index.html  style.css
src/: main.rs
