[package]
name = "sinhala_training"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
rand = "0.8.5"

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = 'z'
lto = true

